--- a/about.html
+++ b/about.html
@@ -11,5 +11,6 @@
 <body>
     <h1>This is a page about me</h1>
     <p>this is a new paragraph about the person who is writing</p>
+    <p>changes</p>
 </body>
 </html>
