--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <h1>This is a page about me</h1>
-    <p>this is a new paragraph about the person who is writing</p>
+    <p>This is a text about the person who is writing</p>
+    <p>another change</p>
+    <p>one more</p>
+    <p>there was a break</p>
 </body>
 </html>
