--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <main>
-  <h1>Awsome landing page</h1>
+  <h1>This is an awesome webpage that I created</h1>
   <a href="about.html">Read about me</a>
   <div class="key-features">
   <div class="feature">
