--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
 
     <div class="numbertext">1 / 6</div>
     <img src="images\IMG_3742.jpg" style="width:100%" >
-    <h1>The beautiful rapefield</h1>
-    <h3>When you are looking for a forest at Leányfalu, but you get at a place like this.</h3>
+    <h1>The beautiful Rapefield</h1>
+    <h3>When you are looking for a forest at Leányfalu, but you get to a place like this.</h3>
   </div>
 
   <div class="mySlides">
     <div class="numbertext">2 / 6</div>
     <img src="images\IMG_0922.JPG" style="width:100%">
-    <h1>Magical sunset</h1>
+    <h1>Magical Sunset</h1>
     <h3>We were at Formentera on our parent's 30th wedding anniversary, and the last night we visited a nice restaurant with this wonderful view.</h3>
   </div>
 
   <div class="mySlides">
     <div class="numbertext">3 / 6</div>
     <img src="images\IMG_3332.JPG" style="width:100%">
-    <h1>Sunrise at florida</h1>
-    <h3>Just an another getting lost at florida. At least we found this fairy-tale named Cocoa beach next to the banana river by fully accident.</h3>
+    <h1>Sunrise at Florida</h1>
+    <h3>Just an another getting lost at Florida. At least we found this fairy-tale named Cocoa beach next to the banana river by fully accident.</h3>
   </div>
     
   <div class="mySlides">
     <div class="numbertext">4 / 6</div>
     <img src="images\IMG_7135.JPG" style="width:100%">
-    <h1>A cool picture with my Dad</h1>
+    <h1>A cool picture with Daddy</h1>
     <h3>This lake is located at Bokod, and a lot of people go there to take nice pictures like this.</h3>
   </div>
 
@@ -51,7 +51,7 @@
     <div class="numbertext">6 / 6</div>
     <img src="images\IMG_9058.JPG" style="width:100%">
     <h1>Nice colors</h1>
-    <h3>Another trip with the family at autumn, when the forest shines bright in these beautiful colors.</h3>
+    <h3>Another trip with the family in autumn, when the forest shines bright in these beautiful colors.</h3>
   </div>
 
   <div>
