--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="mySlides">
     <div class="numbertext">4 / 6</div>
     <img src="images\IMG_7135.JPG" style="width:100%">
-    <h1>A cool pics with Daddy</h1>
+    <h1>A cool picture with Daddy</h1>
     <h3>This lake is located at Bokod, and a lot of people go there to take nice pictures like this.</h3>
   </div>
 
